--- a/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.grafana.autoEmbed }}
+{{if .Values.grafana.preprocess}}#grafana.preprocess.start{{end}}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -29,7 +30,7 @@ spec:
           - "/bin/bash"
           - "-ecx"
           - |
-            {{- if and .Values.grafana.secretNamespace .Values.grafana.secretName .Values.grafana.secretUserKey .Values.grafana.secretPasswordKey }} 
+            {{- if and .Values.grafana.secretNamespace .Values.grafana.secretName .Values.grafana.secretUserKey .Values.grafana.secretPasswordKey }}
             grafana_credentials="$(kubectl get secret -n '{{ .Values.grafana.secretNamespace }}' '{{ .Values.grafana.secretName }}' \
               --template '{{ `{{` }} printf `%s:%s` (index .data `{{ .Values.grafana.secretUserKey }}` | base64decode) (index .data `{{ .Values.grafana.secretPasswordKey }}` | base64decode) {{ `}}` }}' \
               )"
@@ -101,4 +102,5 @@ spec:
             {{- end }}
       {{- end }}
       restartPolicy: OnFailure
+{{if .Values.grafana.preprocess}}#grafana.preprocess.end{{end}}
 {{ end }}
