--- a/doc/config.toml
+++ b/doc/config.toml
@@ -10,26 +10,104 @@ defaultContentLanguageInSubdir = false
 [params]
   description = "Documentation for StackGres"
   author = "OnGres"
-  showVisitedLinks = true
+  showVisitedLinks = false
   disableBreadcrumb = false
-  disableNextPrev = false
+  disableNextPrev = true
   themeVariant = "stackgres"
+  DisableShortcutsTitle = true
 
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
 
-[Languages]
-	[Languages.en]
+[languages]
+	[languages.en]
 		title = "StackGres Documentation"
 		weight = 1
 		languageName = "English"
 		contentDir = "content/en"
 
-		[[Languages.en.menu.shortcuts]]
+		[[languages.en.menu.shortcuts]]
 		name = "<i class='fab fa-fw fa-gitlab'></i> GitLab repo"
 		identifier = "ds"
 		url = "https://gitlab.com/ongresinc/stackgres"
 		weight = 10
+
+        # Main Menu EN
+        [[languages.en.menu.main]]
+            name    = "Features"
+            url     = "/features"
+            weight  = 1
+        [[languages.en.menu.main]]
+            name    = "Install"
+            url     = "/install"
+            weight  = 2
+        [[languages.en.menu.main]]
+            name    = "Pricing"
+            url     = "/pricing"
+            weight  = 3
+        [[languages.en.menu.main]]
+            name    = "Documentation"
+            url     = "/doc/latest"
+            weight  = 4
+        [[languages.en.menu.main]]
+            name    = "Community"
+            url     = "/community"
+            weight  = 5
+        [[languages.en.menu.main]]
+            name    = "Blog"
+            url     = "/blog"
+            weight  = 6
+        [[languages.en.menu.main]]
+            name    = "Contact"
+            url     = "/contact"
+            weight  = 7
+
+        # Product EN
+        [[languages.en.menu.product]]
+            name    = "Features"
+            url     = "/features"
+            weight  = 1
+        [[languages.en.menu.product]]
+            name    = "Install"
+            url     = "/install"
+            weight  = 2
+        [[languages.en.menu.product]]
+            name    = "Pricing"
+            url     = "/pricing"
+            weight  = 3
+        [[languages.en.menu.product]]
+            name    = "Contact"
+            url     = "/contact"
+            weight  = 4
+        
+        # Resources EN
+        [[languages.en.menu.resources]]
+            name    = "Documentation"
+            url     = "/doc/latest"
+            weight  = 1
+        [[languages.en.menu.resources]]
+            name    = "Community"
+            url     = "/community"
+            weight  = 2
+        [[languages.en.menu.resources]]
+            name    = "Blog"
+            url     = "/blog"
+            weight  = 3
+        
+        # More EN
+        [[languages.en.menu.more]]
+            name    = "Star on GitHub"
+            url     = "https://github.com/ongres/stackgres/"
+            weight  = 1
+        [[languages.en.menu.more]]
+            name    = "Join our Slack"
+            url     = "https://slack.stackgres.io/"
+            weight  = 2
+        [[languages.en.menu.more]]
+            name    = "Stalk us on Twitter"
+            url     = "https://twitter.com/ongresinc"
+            weight  = 3
+        
 
 [markup.goldmark.renderer]
   unsafe= true
