--- a/stackgres-k8s/src/jobs/pom.xml
+++ b/stackgres-k8s/src/jobs/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <artifactId>stackgres-parent</artifactId>
         <groupId>io.stackgres</groupId>
-        <version>1.0.0-alpha1</version>
+        <version>1.0.0-alpha2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
