fix: temporarily disable blog link on navigation

--- a/doc/config.toml
+++ b/doc/config.toml
@@ -53,10 +53,10 @@ home = [ "HTML", "RSS", "JSON"]
             name    = "Community"
             url     = "https://stackgres.io/community"
             weight  = 5
-        [[languages.en.menu.main]]
-            name    = "Blog"
-            url     = "https://stackgres.io/blog"
-            weight  = 6
+        #[[languages.en.menu.main]]
+        #    name    = "Blog"
+        #    url     = "https://stackgres.io/blog"
+        #    weight  = 6
         [[languages.en.menu.main]]
             name    = "Contact"
             url     = "https://stackgres.io/contact"
@@ -89,10 +89,10 @@ home = [ "HTML", "RSS", "JSON"]
             name    = "Community"
             url     = "https://stackgres.io/community"
             weight  = 2
-        [[languages.en.menu.resources]]
-            name    = "Blog"
-            url     = "https://stackgres.io/blog"
-            weight  = 3
+        #[[languages.en.menu.resources]]
+        #    name    = "Blog"
+        #    url     = "https://stackgres.io/blog"
+        #    weight  = 3
         
         # More EN
         [[languages.en.menu.more]]
