--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
@@ -29,9 +29,9 @@ spec:
             name:
               type: string
               description: |
-                The name of the backup created (automatic backups) or to be created (if requesting manual creation). It must follow [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
+                Name of the backup. Following [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
 
-                This name needs to be unique across all StackGres backups in the same namespace.
+                The name must be unique across all StackGres backups in the same namespace."
         spec:
           type: object
           properties:
@@ -55,9 +55,9 @@ spec:
               properties:
                 status:
                   type: string
-                  enum: ["Running", "Completed", "Failed"]
+                  enum: [Running, Completed, Failed]
                   description: |
-                    The status of the backup.
+                    Status of the backup.
                 failure:
                   type: string
                   description: |
@@ -65,7 +65,7 @@ spec:
                 jobPod:
                   type: string
                   description: |
-                    The name of pod assigned to this backup. StackGres utilizes internally a locking mechanism based on the pod name of the job that creates the backup.
+                    Name of the pod assigned to the backup. StackGres utilizes internally a locking mechanism based on the pod name of the job that creates the backup.
                 managedLifecycle:
                   type: boolean
                   description: |
@@ -77,40 +77,40 @@ spec:
                       type: string
                       # format: date-time
                       description: |
-                        The start time of backup.
+                        Start time of backup.
                     end:
                       type: string
                       # format: date-time
                       description: |
-                        The end time of backup.
+                        End time of backup.
                     stored:
                       type: string
                       # format: date-time
                       description: |
-                        The time at which the backup is safely stored in the object storage.
+                        Time at which the backup is safely stored in the object storage.
             backupInformation:
               type: object
               properties:
                 hostname:
                   type: string
                   description: |
-                    The hostname of instance where the backup is taken.
+                    Hostname of the instance where the backup is taken from.
                 sourcePod:
                   type: string
                   description: |
-                    The pod where the backup is taken.
+                    Pod where the backup is taken from.
                 systemIdentifier:
                   type: string
                   description: |
-                    The Postgres *system identifier* of the cluster this backup is taken from.
+                    Postgres *system identifier* of the cluster this backup is taken from.
                 postgresVersion:
                   type: string
                   description: |
-                    The Postgres version of the server where backup is taken.
+                    Postgres version of the server where the backup is taken from.
                 pgData:
                   type: string
                   description: |
-                    The data directory where the backup is taken.
+                    Data directory where the backup is taken from.
                 size:
                   type: object
                   properties:
@@ -130,32 +130,32 @@ spec:
                     start:
                       type: string
                       description: |
-                        The LSN of when backup started.
+                        LSN of when the backup started.
                     end:
                       type: string
                       description: |
-                        The LSN of when backup finished.
+                        LSN of when the backup finished.
                 startWalFile:
                   type: string
                   description: |
-                    The WAL segment file name when backup was started.
+                    WAL segment file name when the backup was started.
                 timeline:
                   type: string
                   description: |
-                    The backup timeline.
+                    Backup timeline.
                 controlData:
                   type: object
                   description: |
                     An object containing data from the output of pg_controldata on the backup.
             sgBackupConfig:
               type: object
-              description: "The name of the backup configuration used to perform this backup."
+              description: The name of the backup configuration used to perform this backup.
               properties:
                 compression:
                   type: string
                   description: |
                     Select the backup compression algorithm. Possible options are: lz4, lzma, brotli. The default method is `lz4`. LZ4 is the fastest method, but compression ratio is the worst. LZMA is way slower, but it compresses backups about 6 times better than LZ4. Brotli is a good trade-off between speed and compression ratio, being about 3 times better than LZ4.
-                  enum: ["lz4", "lzma", "brotli"]
+                  enum: [lz4, lzma, brotli]
                 storage:
                   type: object
                   description: |
@@ -163,9 +163,9 @@ spec:
                   properties:
                     type:
                       type: string
-                      enum: ["s3", "s3Compatible", "gcs", "azureBlob"]
+                      enum: [s3, s3Compatible, gcs, azureBlob]
                       description: |
-                        Determine the type of object storage used for storing the base backups and WAL segments.
+                        Specifies the type of object storage used for storing the base backups and WAL segments.
                         Possible values:
                         *  `s3`: Amazon Web Services S3 (Simple Storage Service).
                         *  `s3Compatible`: non-AWS services that implement a compatibility API with AWS S3.
@@ -178,27 +178,27 @@ spec:
                       properties:
                         bucket:
                           type: string
-                          pattern: "^[^/]+(/[^/]*)*$"
+                          pattern: ^[^/]+(/[^/]*)*$
                           description: |
                             AWS S3 bucket name.
                         path:
                           type: string
-                          pattern: "^(/[^/]*)*$"
+                          pattern: ^(/[^/]*)*$
                           description: |
                             Optional path within the S3 bucket. Note that StackGres generates in any case a folder per
                             StackGres cluster, using the `SGCluster.metadata.name`.
                         region:
                           type: string
                           description: |
-                            The AWS S3 region. The Region may be detected using s3:GetBucketLocation, but if you wish to avoid giving permissions to this API call or forbid it from the applicable IAM policy, you must then specify this property.
+                            AWS S3 region. The Region may be detected using s3:GetBucketLocation, but to avoid giving permissions to this API call or forbid it from the applicable IAM policy, this property must be explicitely specified.
                         storageClass:
                           type: string
                           description: |
-                            The [Amazon S3 Storage Class](https://aws.amazon.com/s3/storage-classes/) to use for the backup object storage. By default, the `STANDARD` storage class is used. Other supported values include `STANDARD_IA` for Infrequent Access and `REDUCED_REDUNDANCY`.
+                            [Amazon S3 Storage Class](https://aws.amazon.com/s3/storage-classes/) used for the backup object storage. By default, the `STANDARD` storage class is used. Other supported values include `STANDARD_IA` for Infrequent Access and `REDUCED_REDUNDANCY`.
                         awsCredentials:
                           type: object
                           description: |
-                            The credentials to access AWS S3 for writing and reading.
+                            Credentials to access AWS S3 for writing and reading.
                           properties:
                             secretKeySelectors:
                               type: object
@@ -218,7 +218,7 @@ spec:
                                       type: string
                                       description: |
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
-                                  required: ["key", "name"]
+                                  required: [key, name]
                                 secretAccessKey:
                                   type: object
                                   description: |
@@ -232,22 +232,22 @@ spec:
                                       type: string
                                       description: |
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
-                                  required: ["key", "name"]
-                              required: ["accessKeyId", "secretAccessKey"]
-                          required: ["secretKeySelectors"]
-                      required: ["bucket", "awsCredentials"]
+                                  required: [key, name]
+                              required: [accessKeyId, secretAccessKey]
+                          required: [secretKeySelectors]
+                      required: [bucket, awsCredentials]
                     s3Compatible:
                       type: object
-                      description: "AWS S3-Compatible API configuration"
+                      description: AWS S3-Compatible API configuration
                       properties:
                         bucket:
                           type: string
-                          pattern: "^[^/]+(/[^/]*)*$"
+                          pattern: ^[^/]+(/[^/]*)*$
                           description: |
                             Bucket name.
                         path:
                           type: string
-                          pattern: "^(/[^/]*)*$"
+                          pattern: ^(/[^/]*)*$
                           description: |
                             Optional path within the S3 bucket. Note that StackGres generates in any case a folder per StackGres cluster, using the `SGCluster.metadata.name`.
                         enablePathStyleAddressing:
@@ -262,15 +262,15 @@ spec:
                         region:
                           type: string
                           description: |
-                            The AWS S3 region. The Region may be detected using s3:GetBucketLocation, but if you wish to avoid giving permissions to this API call or forbid it from the applicable IAM policy, you must then specify this property.
+                            AWS S3 region. The Region may be detected using s3:GetBucketLocation, but to avoid giving permissions to this API call or forbid it from the applicable IAM policy, this property must be explicitely specified.
                         storageClass:
                           type: string
                           description: |
-                            The [Amazon S3 Storage Class](https://aws.amazon.com/s3/storage-classes/) to use for the backup object storage. By default, the `STANDARD` storage class is used. Other supported values include `STANDARD_IA` for Infrequent Access and `REDUCED_REDUNDANCY`.
+                            [Amazon S3 Storage Class](https://aws.amazon.com/s3/storage-classes/) used for the backup object storage. By default, the `STANDARD` storage class is used. Other supported values include `STANDARD_IA` for Infrequent Access and `REDUCED_REDUNDANCY`.
                         awsCredentials:
                           type: object
                           description: |
-                            The credentials to access AWS S3 for writing and reading.
+                            Credentials to access AWS S3 for writing and reading.
                           properties:
                             secretKeySelectors:
                               type: object
@@ -290,7 +290,7 @@ spec:
                                       type: string
                                       description: |
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
-                                  required: ["key", "name"]
+                                  required: [key, name]
                                 secretAccessKey:
                                   type: object
                                   description: |
@@ -304,10 +304,10 @@ spec:
                                       type: string
                                       description: |
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
-                                  required: ["key", "name"]
-                              required: ["accessKeyId", "secretAccessKey"]
-                          required: ["secretKeySelectors"]
-                      required: ["bucket", "awsCredentials"]
+                                  required: [key, name]
+                              required: [accessKeyId, secretAccessKey]
+                          required: [secretKeySelectors]
+                      required: [bucket, awsCredentials]
                     gcs:
                       type: object
                       description: |
@@ -315,18 +315,18 @@ spec:
                       properties:
                         bucket:
                           type: string
-                          pattern: "^[^/]+(/[^/]*)*$"
+                          pattern: ^[^/]+(/[^/]*)*$
                           description: |
                             GCS bucket name.
                         path:
                           type: string
-                          pattern: "^(/[^/]*)*$"
+                          pattern: ^(/[^/]*)*$
                           description: |
                             Optional path within the GCS bucket. Note that StackGres generates in any case a folder per StackGres cluster, using the `SGCluster.metadata.name`.
                         gcpCredentials:
                           type: object
                           description: |
-                            The credentials to access GCS for writing and reading.
+                            Credentials to access GCS for writing and reading.
                           properties:
                             fetchCredentialsFromMetadataService:
                               type: boolean
@@ -352,10 +352,10 @@ spec:
                                       type: string
                                       description: |
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
-                                  required: ["key", "name"]
-                              required: ["serviceAccountJSON"]
+                                  required: [key, name]
+                              required: [serviceAccountJSON]
                           required: []
-                      required: ["bucket", "gcpCredentials"]
+                      required: [bucket, gcpCredentials]
                     azureBlob:
                       type: object
                       description: |
@@ -363,12 +363,12 @@ spec:
                       properties:
                         bucket:
                           type: string
-                          pattern: "^[^/]+(/[^/]*)*$"
+                          pattern: ^[^/]+(/[^/]*)*$
                           description: |
                             Azure Blob Storage bucket name.
                         path:
                           type: string
-                          pattern: "^(/[^/]*)*$"
+                          pattern: ^(/[^/]*)*$
                           description: |
                             Optional path within the Azure Blobk bucket. Note that StackGres generates in any case a folder per StackGres cluster, using the `SGCluster.metadata.name`.
                         azureCredentials:
@@ -394,7 +394,7 @@ spec:
                                       type: string
                                       description: |
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
-                                  required: ["key", "name"]
+                                  required: [key, name]
                                 accessKey:
                                   type: object
                                   description: |
@@ -408,8 +408,8 @@ spec:
                                       type: string
                                       description: |
                                         Name of the referent.  [More information](https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names).
-                                  required: ["key", "name"]
-                              required: ["storageAccount", "accessKey"]
-                      required: ["bucket", "azureCredentials"]
-                  required: ["type"]
-              required: ["storage"]
+                                  required: [key, name]
+                              required: [storageAccount, accessKey]
+                      required: [bucket, azureCredentials]
+                  required: [type]
+              required: [storage]
