--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGInstanceProfile.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGInstanceProfile.yaml
@@ -27,9 +27,9 @@ spec:
             name:
               type: string
               description: |
-                The name of this Instance Profile. An instance profile represents a "kind" of server (CPU and RAM) where you may run StackGres, classified by a given name. This profile may be referenced by zero or more SGClusters, and if so it would be referenced by this name. Following [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
+                Name of the Instance Profile. An instance profile represents a ""kind"" of server (CPU and RAM) where you may run StackGres, classified by a given name. The profile may be referenced by zero or more SGClusters, and if so it would be referenced by its name. Following [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
 
-                This name needs to be unique across all instance profiles in the same namespace.
+                The name must be unique across all instance profiles in the same namespace."
         spec:
           type: object
           properties:
@@ -37,18 +37,18 @@ spec:
               type: string
               pattern: '^[1-9][0-9]*[m]?$'
               description: |
-                CPU(s) (cores) to use for every instance of a SGCluster. Please note that every StackGres pod contains not only the Patroni+Postgres container, but several other sidecar containers. While the majority of the resources are devoted to the main Postgres container, some CPU is needed for the sidecars.
+                CPU(s) (cores) used for every instance of a SGCluster. Please note that every StackGres pod contains not only the Patroni+Postgres container, but several other sidecar containers. While the majority of the resources are devoted to the main Postgres container, some CPU is needed for the sidecars.
 
-                The specified number of cores will be split between all the containers.
+                The number of cores set is split between all the containers.
 
                 A minimum of 2 cores is recommended.
             memory:
               type: string
               pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi)$'
               description: |
-                RAM allocated to every instance of a SGCluster. Use the suffix `Mi` or `Gi` to specify Mebibytes or Gibibytes, respectively. Please note that every StackGres pod contains not only the Patroni+Postgres container, but several other sidecar containers. While the majority of the resources are devoted to the main Postgres container, some RAM is needed for the sidecars.
+                RAM allocated to every instance of a SGCluster. The suffix `Mi` or `Gi` specifies Mebibytes or Gibibytes, respectively. Please note that every StackGres pod contains not only the Patroni+Postgres container, but several other sidecar containers. While the majority of the resources are devoted to the main Postgres container, some RAM is needed for the sidecars.
 
-                The specified amount of RAM will be split between all the containers.
+                The amount of RAM set is split between all the containers.
 
                 A minimum of 2-4Gi is recommended.
           required: ["cpu", "memory"]
