--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,6 @@ variables:
                    -Dsurefire.useFile=false
                    -Dsurefire.useFile=false
                    -DtrimStackTrace=false
-  PRODUCTION_DOCUMENTATION_BASE_URL: "https://stackgres.io/doc/latest"
   SKIP_NATIVE: "false"
   SKIP_E2E: "false"
   SKIP_DEPLOY: "false"
@@ -36,6 +35,7 @@ variables:
   K8S_VERSION: 1.16.9
   K8S_FROM_DIND: "true"
   K8S_REUSE: "true"
+  LATEST: "false"
 
 # Cache downloaded dependencies and plugins between builds.
 # To keep cache across branches add 'key: "$CI_JOB_NAME"'
