--- a/.gitlab-ci/post-build.yml
+++ b/.gitlab-ci/post-build.yml
@@ -22,17 +22,26 @@ build documentation:
   - pip install yq
   - sh -x stackgres-k8s/src/api-web/src/main/swagger/build.sh
   - sh -x doc/build.sh
-  - STACKGRES_VERSION="$(echo 'import xml.etree.ElementTree as ET; print ET.parse("stackgres-k8s/src/pom.xml").getroot().find("{%s}version" % "http://maven.apache.org/POM/4.0.0").text' | python)"
+  - |
+    STACKGRES_VERSION="$(
+      grep '<artifactId>stackgres-parent</artifactId>' "$(dirname "$0")/../stackgres-k8s/src/pom.xml" -A 2 -B 2 \
+      | grep -oP '(?<=<version>).*?(?=</version>)')"
+    STACKGRES_DOC_VERSION="$(printf "%s" "$STACKGRES_VERSION" | cut -d . -f 1-2)$(printf "%s" "$STACKGRES_VERSION" \
+      | grep -q "-SNAPSHOT" && printf "-dev" || true)"
   - |
     if [[ ! -z "$CI_COMMIT_TAG" && ! "$CI_COMMIT_TAG" =~ ^latest-.*$ ]]
     then
-      DOCUMENTATION_BASE_URL="$PRODUCTION_DOCUMENTATION_BASE_URL"
+      DOCUMENTATION_BASE_URL="https://stackgres.io/doc"
     else
-      DOCUMENTATION_BASE_URL="https://ongresinc.gitlab.io/stackgres/$STACKGRES_VERSION"
+      DOCUMENTATION_BASE_URL="https://ongresinc.gitlab.io/stackgres"
     fi
   - mkdir -p "doc/public/$STACKGRES_VERSION"
-  - hugo -v --source doc --destination "$(pwd)/doc/public/$STACKGRES_VERSION" --baseURL="$DOCUMENTATION_BASE_URL"
-  - cp -a "doc/public/$STACKGRES_VERSION" doc/public/latest
+  - hugo -v --source doc --destination "$(pwd)/doc/public/$STACKGRES_DOC_VERSION" --baseURL="$DOCUMENTATION_BASE_URL/$STACKGRES_DOC_VERSION"
+  - |
+    if [ "$LATEST" = true ]
+    then
+      hugo -v --source doc --destination "$(pwd)/doc/public/latest" --baseURL="$DOCUMENTATION_BASE_URL/latest"
+    fi
   artifacts:
     expire_in: 1 week
     when: always
