--- a/.gitlab-ci/post-build.yml
+++ b/.gitlab-ci/post-build.yml
@@ -17,6 +17,7 @@ build documentation:
   dependencies:
     - build
   script:
+  - set -x
   - apt update -y
   - apt install -y jq python-pip
   - pip install yq
@@ -24,10 +25,10 @@ build documentation:
   - sh -x doc/build.sh
   - |
     STACKGRES_VERSION="$(
-      grep '<artifactId>stackgres-parent</artifactId>' "$(dirname "$0")/../stackgres-k8s/src/pom.xml" -A 2 -B 2 \
+      grep '<artifactId>stackgres-parent</artifactId>' "stackgres-k8s/src/pom.xml" -A 2 -B 2 \
       | grep -oP '(?<=<version>).*?(?=</version>)')"
     STACKGRES_DOC_VERSION="$(printf "%s" "$STACKGRES_VERSION" | cut -d . -f 1-2)$(printf "%s" "$STACKGRES_VERSION" \
-      | grep -q "-SNAPSHOT" && printf "-dev" || true)"
+      | grep -q ".-SNAPSHOT$" && printf "%s" "-dev" || true)"
   - |
     if [[ ! -z "$CI_COMMIT_TAG" && ! "$CI_COMMIT_TAG" =~ ^latest-.*$ ]]
     then
