--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>io.stackgres</groupId>
   <artifactId>stackgres-parent</artifactId>
-  <version>0.9.4-SNAPSHOT</version>
+  <version>0.9.4</version>
   <packaging>pom</packaging>
   <name>Parent POM</name>
 
