chore: new admin-ui build

--- a/.gitlab-ci/build.yml
+++ b/.gitlab-ci/build.yml
@@ -4,7 +4,10 @@ build:
   tags:
     - stackgres-runner
   script:
+    - 'microdnf install python3-pip jq'
+    - 'pip3 install yamllint yq'
     - 'mvn $MAVEN_CLI_OPTS clean verify -P safer'
+    - 'sh -x stackgres-k8s/src/api-web/src/main/swagger/build.sh'
   cache:
     paths:  
       - $CI_PROJECT_DIR/.m2/repository
