--- a/.gitlab-ci/post-build.yml
+++ b/.gitlab-ci/post-build.yml
@@ -1,10 +1,17 @@
 build ui:
-  image: alpine:3.12
+  image: node:13.7.0
   stage: post-build
+  dependencies:
+    - build
   script:
-  - apk add py3-pip jq
-  - pip install yamllint yq
-  - sh -x stackgres-k8s/src/admin-ui/build.sh
+  - cd stackgres-k8s/src/admin-ui
+  - |
+    cat << 'EOF' > .env.production.local
+    VUE_APP_API_URL=/stackgres
+    EOF
+  - npm install
+  - npm run build
+  - sh -x build.sh
   artifacts:
     expire_in: 1 week
     when: always
@@ -17,11 +24,6 @@ build documentation:
   dependencies:
     - build
   script:
-  - set -x
-  - apt update -y
-  - apt install -y jq python-pip
-  - pip install yq
-  - sh -x stackgres-k8s/src/api-web/src/main/swagger/build.sh
   - sh -x doc/build.sh
   - |
     STACKGRES_VERSION="$(
