--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -43,6 +43,7 @@ smallrye.jwt.require.named-principal=true
 
 # StackGres Configuration
 stackgres.operatorName=${stackgres.operatorName}
+stackgres.containerRegistry=${stackgres.containerRegistry}
 stackgres.operatorVersion=${stackgres.operatorVersion}
 stackgres.containerBuild=${stackgres.containerBuild}
 stackgres.group=${stackgres.group}
