fix: enabling status subresource in SGCluster CRD to avoid overwrites

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -59,6 +59,12 @@ rules:
   - update
   - patch
   - delete
+- apiGroups: ["stackgres.io"]
+  resources:
+  - sgclusters/status
+  - sgdistributedlogs/status
+  verbs:
+  - update
 {{- if .Values.prometheus.allowAutobind }}
 - apiGroups: ["monitoring.coreos.com"]
   resources:
