--- a/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
@@ -550,3 +550,5 @@ spec:
                           type: string
                           description: |
                             The primary instance that this operation is targetting
+      subresources:
+        status: { }
