feat: extend cluster status REST API with opened connections

--- a/stackgres-k8s/src/api-web/src/main/resources/patroni-stats.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/patroni-stats.properties
@@ -28,3 +28,4 @@ diskPsiFullTotal=cat /sys/fs/cgroup/io.pressure | grep '^full ' | cut -d ' ' -f 
 load1m=cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 1
 load5m=cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 2
 load10m=cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 3
+connections=curl -s http://localhost:8001/stats|grep -F 'postgres.ingress_postgres.sessions:'|tr -d ' '|cut -d : -f 2
