logs: set TRACE level for backup and dbops jobs

--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -19,12 +19,18 @@ quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=DEBUG
 quarkus.log.category."io.stackgres".level=DEBUG
 quarkus.log.category."io.quarkus".level=DEBUG
+quarkus.log.category."io.stackgres.operator.dbops.factory.DbOpsJob".level=TRACE
+quarkus.log.category."io.stackgres.operator.backup.BackupJob".level=TRACE
+quarkus.log.category."io.stackgres.operator.cluster.factory.BackupCronJob".level=TRACE
 
 # Logger Development
 %dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
 %dev.quarkus.log.console.level=DEBUG
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
 %dev.quarkus.log.category."io.quarkus".level=DEBUG
+%dev.quarkus.log.category."io.stackgres.operator.dbops.factory.DbOpsJob".level=TRACE
+%dev.quarkus.log.category."io.stackgres.operator.backup.BackupJob".level=TRACE
+%dev.quarkus.log.category."io.stackgres.operator.cluster.factory.BackupCronJob".level=TRACE
 
 # SSL configuration
 quarkus.http.ssl.certificate.file=${quarkus.http.ssl.certificate.file}
