--- a/stackgres-k8s/src/common/src/main/resources/crds/SGInstanceProfile.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGInstanceProfile.yaml
@@ -16,6 +16,13 @@ spec:
     - name: v1
       served: true
       storage: true
+      additionalPrinterColumns:
+      - name: cpu
+        type: string
+        jsonPath: .spec.cpu
+      - name: memory
+        type: string
+        jsonPath: .spec.memory
       schema:
         openAPIV3Schema:
           required: ["metadata", "spec"]
