--- a/stackgres-k8s/src/common/src/main/resources/crds/SGPostgresConfig.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGPostgresConfig.yaml
@@ -16,6 +16,10 @@ spec:
     - name: v1
       served: true
       storage: true
+      additionalPrinterColumns:
+      - name: version
+        type: string
+        jsonPath: .spec.postgresVersion
       schema:
         openAPIV3Schema:
           type: object
